Thêm tính năng thêm sách bằng file văn bản